2007-07-25  Sanel <karijes@users.sourceforge.net>

	* Config class is not any more limited with line and value sizes, althought
	section/key does (can't find any reason why would someone use
	unlimited sections/keys !)
	* Small fixup with clear() in Config class
	* Added tests for config_getline() functions, used internally by Config
	class
	* Finished remove_entry() in Config

2007-07-16  Sanel <karijes@users.sourceforge.net>

	* Forced environ outside edelib namespace
	* Added tests for Vedran's String fix
	* Added some perftests to watch container(s) behaviours on stringtok
	* Correct paths for jam cached data

2007-07-11  Sanel <karijes@users.sourceforge.net>
	* Newer autoconf versions require datarootdir to be present.
	Jamconfig.in and initjamfile.m4 are modified for that

2007-07-07  Sanel <karijes@users.sourceforge.net>
	
	* tests/mime.cpp, removed output from text/html since in newer
	versions of mime-types distributions, description is changed

2007-07-02  Sanel <karijes@users.sourceforge.net>

	* DirWatch can now return what file was changed and how
	is changed (created,modified,deleted)
	* Looks like freebsd keeps lstat/stat defined else
	* Fixup when dnotify is not detected

2007-07-01  Sanel <karijes@users.sourceforge.net>

	* Added DirWatch with example. inotify usage is still not implemented
	* TODO entry
	* Added dnotify.m4

2007-06-26  Sanel <karijes@users.sourceforge.net>

	* Bumped out Item class
	* Added SevenSeg widget with sample
	* Ups, IconTheme would not add '/icons/' to XDG dirs

2007-06-25  Sanel <karijes@users.sourceforge.net>

	* Made DesktopFile inherits Config which is much better than
	previous version

2007-06-24  Sanel <karijes@users.sourceforge.net>

	* Added file_path; tests too
	* Added DesktopFile for reading .desktop files with tests
	* In tests name strtok->stringtok
	* In Config added set_localized() to match get_localized()
	* ...and tests of course
	* TODO entry about LC_MESSAGES in Config